<resources>
    <string name="app_name">Movie_in</string>
    <string name="sign_up">Sign-up</string>
    <string name="sign_in">Sign-in</string>
    <string name="weclome_to_movie_in">Weclome to Movie-in!</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="signUp">Sign-Up</string>
    <string name="full_name">Full-name:</string>
    <string name="email2">Email:</string>
    <string name="please_enter_full_name">Please enter Full-name...</string>
    <string name="please_enter_email">Please enter email....</string>
    <string name="password_numbers_only">Password(Numbers only):</string>
    <string name="please_enter_password">Please enter password...</string>
    <string name="back2">Back</string>
    <string name="enter_password">Enter password...</string>
    <string name="enter_email">Enter email....</string>
    <string name="passwordSignUp">Password</string>
    <string name="enter_passwordSignUp">Enter password....</string>
    <string name="welcome">Welcome</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="enter_email2">Enter email...</string>
    <string name="repeat_password3">Repeat password..</string>
    <string name="logout">Logout</string>
    <string name="purchase_a_ticket">Purchase a Ticket</string>
    <string name="account">Account</string>
    <string name="set_the_date">Set the Date</string>
    <string name="confirm">Confirm</string>
    <string name="back8">Back</string>
    <string name="add_movie">Add Movie</string>
    <string name="enter_movie_name">Enter movie name...</string>
    <string name="rating">Rating...</string>
    <string name="enter_length_of_movie">Enter length of Movie...</string>
    <string name="enter_date">Enter date...</string>
    <string name="enter">Enter</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_available_parking">availableParking</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next8">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next">Next</string>
    <string name="payment">Payment</string>
    <string name="cvv">CVV</string>
    <string name="confirm2">confirm</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp. Date</string>
    <string name="receipt">Receipt</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="payment_history">Payment History</string>

</resources>